[gd_scene load_steps=5 format=3 uid="uid://32ql8h4vqmth"]

[ext_resource type="Script" uid="uid://bohldwrst0srv" path="res://scenes/main.gd" id="1_o5qli"]
[ext_resource type="Shader" uid="uid://ibql5kc74aiv" path="res://resources/shaders/blur.gdshader" id="2_0wfyh"]
[ext_resource type="Theme" uid="uid://dc6mvo4jbes33" path="res://main.theme" id="2_sugp2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sugp2"]
shader = ExtResource("2_0wfyh")
shader_parameter/strength = 3.3
shader_parameter/mix_percentage = 0.3

[node name="Main" type="Node2D"]
script = ExtResource("1_o5qli")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(132, 132)
zoom = Vector2(2, 2)

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="BackgroundLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1254902, 0.08235294, 0.2, 1)

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="UILayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_sugp2")

[node name="VBoxContainer" type="VBoxContainer" parent="UILayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UILayer/HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="HealthLabel" type="Label" parent="UILayer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Health:"
horizontal_alignment = 2

[node name="HealthValueLabel" type="Label" parent="UILayer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "15/15"

[node name="HBoxContainer2" type="HBoxContainer" parent="UILayer/HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="DepthLabel" type="Label" parent="UILayer/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Depth:"
horizontal_alignment = 2

[node name="DepthValueLabel" type="Label" parent="UILayer/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"

[node name="Control" type="Control" parent="UILayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="UILayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UILayer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="TimeValueLabel" type="Label" parent="UILayer/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "30s"
horizontal_alignment = 2

[node name="TimeLabel" type="Label" parent="UILayer/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "seconds"

[node name="HBoxContainer2" type="HBoxContainer" parent="UILayer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="MoneyValueLabel" type="Label" parent="UILayer/HBoxContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 2

[node name="MoneyLabel" type="Label" parent="UILayer/HBoxContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = ":¢"

[node name="ScoreControl" type="Control" parent="UILayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_sugp2")

[node name="ColorRect" type="ColorRect" parent="UILayer/ScoreControl"]
material = SubResource("ShaderMaterial_sugp2")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScoreContainer" type="HBoxContainer" parent="UILayer/ScoreControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="UILayer/ScoreControl/ScoreContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="VBoxContainer" type="VBoxContainer" parent="UILayer/ScoreControl/ScoreContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Control" type="Control" parent="UILayer/ScoreControl/ScoreContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScoreLabel" type="RichTextLabel" parent="UILayer/ScoreControl/ScoreContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "[b]Final Score[/b]
Depth + ¢
[hr]
15 + 20
[hr]
[wave][b]35 points![/b][/wave]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="UILayer/ScoreControl/ScoreContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Restart"

[node name="Control2" type="Control" parent="UILayer/ScoreControl/ScoreContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="Timer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
autostart = true
